Add Docker SQL DB support
Add Docker SQL DB support

--- a/src/CombatAnalysis.WebApp/ClientApp/.env.production
+++ b/src/CombatAnalysis.WebApp/ClientApp/.env.production
@@ -3,7 +3,7 @@ HTTPS=true
 REACT_APP_CODE_CHALLENGE_METHOD=SHA-256
 REACT_APP_CLIENT_ID=client1
 REACT_APP_CLIENT_SCOPE=client1scope
-REACT_APP_IDENTITY_SERVER=https://solinx.identity:6436
+REACT_APP_IDENTITY_SERVER=https://solinx.analysis.identity
 REACT_APP_IDENTITY_SERVER_AUTH_PATH=authorization
 REACT_APP_IDENTITY_SERVER_REGISTRY_PATH=registration
-REACT_APP_REDIRECT_URI=https://solinx.analysis.community/callback
+REACT_APP_REDIRECT_URI=https://solinx.analysis.web/callback
