--- a/src/CombatAnalysis.WebApp/appsettings.Production.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Production.json
@@ -1,11 +1,11 @@
 {
-  "CombatParserApiPort": "https://solinx.analysis.web.api.parser:6431/",
-  "UserApiPort": "https://solinx.analysis.web.api.user:6432/",
-  "ChatApiPort": "https://solinx.analysis.web.api.chat:6434/",
-  "CommunicationApiPort": "https://solinx.analysis.web.api.communication:6433/",
-  "IdentityPort": "https://solinx.identity:6436/",
+  "CombatParserApiPort": "https://solinx.analysis.api.parser/",
+  "UserApiPort": "https://solinx.analysis.api.user/",
+  "ChatApiPort": "https://solinx.analysis.api.chat/",
+  "CommunicationApiPort": "https://solinx.analysis.api.communication/",
+  "IdentityPort": "https://solinx.analysis.identity/",
   "Authentication": {
     "ClientId": "client1",
-    "RedirectUri": "https://solinx.analysis.community/callback"
+    "RedirectUri": "https://solinx.analysis.web/callback"
   }
 }
