--- a/src/API/CombatAnalysis.CombatParserAPI/CombatAnalysis.CombatParserAPI.csproj
+++ b/src/API/CombatAnalysis.CombatParserAPI/CombatAnalysis.CombatParserAPI.csproj
@@ -12,13 +12,15 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
+    <PackageReference Include="Serilog" Version="4.0.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\CombatAnalysis.BL\CombatAnalysis.BL.csproj" />
     <ProjectReference Include="..\..\CombatAnalysis.CombatParser\CombatAnalysis.CombatParser.csproj" />
-    <ProjectReference Include="..\CombatAnalysis.CommunicationAPI\CombatAnalysis.CommunicationAPI.csproj" />
   </ItemGroup>
 
 </Project>
