--- a/src/API/CombatAnalysis.CombatParserAPI/appsettings.Production.json
+++ b/src/API/CombatAnalysis.CombatParserAPI/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SOLINX;Database=Combat_Analysis.Combat_Logs;User Id=sa;Password=Oleg123;Integrated Security=False;Connect Timeout=180;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "DefaultConnection": "Server=host.docker.internal,1433;Database=Combat_Analysis.Combat_Logs;User Id=sa;Password=Oleg123;Integrated Security=False;Connect Timeout=180;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
     "Firebase": "https://detailsanalysisgamecombatlogs-default-rtdb.firebaseio.com/"
   },
   "Database": {
