--- a/src/API/CombatAnalysis.UserApi/appsettings.Production.json
+++ b/src/API/CombatAnalysis.UserApi/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SOLINX;Database=Combat_Analysis.User;User Id=sa;Password=Oleg123;Integrated Security=False;Connect Timeout=120;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "DefaultConnection": "Server=host.docker.internal,1433;Database=Combat_Analysis.User;User Id=sa;Password=Oleg123;Integrated Security=False;Connect Timeout=120;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
     "Firebase": "https://detailsanalysisgamecombatlogs-default-rtdb.firebaseio.com/"
   },
   "Database": {
@@ -9,11 +9,11 @@
   },
   "Authentication": {
     "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ=",
-    "Authority": "https://solinx.identity:6436/",
+    "Authority": "https://solinx.analysis.identity/",
     "Audience": "client1"
   },
   "Identity": {
-    "Server": "https://solinx.identity:6436/"
+    "Server": "https://solinx.analysis.identity/"
   },
   "Client": {
     "ClientId": "client1",
