--- a/src/CombatAnalysis.WebApp/appsettings.Production.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Production.json
@@ -1,9 +1,9 @@
 {
-  "CombatParserApiPort": "https://solinx.analysis.api.parser/",
-  "UserApiPort": "https://solinx.analysis.api.user/",
-  "ChatApiPort": "https://solinx.analysis.api.chat/",
-  "CommunicationApiPort": "https://solinx.analysis.api.communication/",
-  "IdentityPort": "https://solinx.analysis.identity/",
+  "CombatParserApiPort": "http://api-combat-parser-api-service.api.svc.cluster.local/",
+  "UserApiPort": "http://api-user-api-service.api.svc.cluster.local/",
+  "ChatApiPort": "http://api-chat-api-service.api.svc.cluster.local/",
+  "CommunicationApiPort": "http://api-communication-api-service.api.svc.cluster.local/",
+  "IdentityPort": "http://identity-service.identity.svc.cluster.local/",
   "Authentication": {
     "ClientId": "client1",
     "RedirectUri": "https://solinx.analysis.web/callback"
