--- a/charts/identity-chart/templates/service.yaml
+++ b/charts/identity-chart/templates/service.yaml
@@ -6,11 +6,11 @@ metadata:
     env: {{ .Values.env }}
     owner: OlegFedosov
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: {{ .Release.Name }}
   ports:
-    - name: {{ .Release.Name }}
+    - name: http
       protocol: {{ .Values.service.protocol }}
       port: {{ .Values.service.port }}
       targetPort:  {{ .Values.service.targetPort }}
