--- a/src/API/CombatAnalysis.CommunicationAPI/appsettings.Production.json
+++ b/src/API/CombatAnalysis.CommunicationAPI/appsettings.Production.json
@@ -10,11 +10,11 @@
   },
   "Authentication": {
     "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ=",
-    "Authority": "https://solinx.analysis.identity/",
+    "Authority": "http://identity-service.identity.svc.cluster.local/",
     "Audience": "client1"
   },
   "Identity": {
-    "Server": "https://solinx.analysis.identity/"
+    "Server": "http://identity-service.identity.svc.cluster.local/"
   },
   "Client": {
     "ClientId": "client1",
