--- a/src/CombatAnalysis.WebApp/Properties/launchSettings.json
+++ b/src/CombatAnalysis.WebApp/Properties/launchSettings.json
@@ -9,6 +9,24 @@
       },
       "applicationUrl": "https://localhost:7002;http://localhost:5127"
     },
+    "https (prod)": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production",
+        "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
+      },
+      "applicationUrl": "https://localhost:9002"
+    },
+    "http (prod)": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production",
+        "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
+      },
+      "applicationUrl": "http://localhost:8002"
+    },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
