--- a/src/Identity/CombatAnalysisIdentity/Properties/launchSettings.json
+++ b/src/Identity/CombatAnalysisIdentity/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "http": {
+    "http (dev)": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
@@ -9,14 +9,32 @@
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5089"
     },
-    "https": {
+    "https (dev)": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7064;http://localhost:5089"
+      "applicationUrl": "https://localhost:7064"
+    },
+    "http (prod)": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:5099"
+    },
+    "https (prod)": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:7067"
     },
     "IIS Express": {
       "commandName": "IISExpress",
