--- a/src/CombatAnalysis.App/App.config
+++ b/src/CombatAnalysis.App/App.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="combatParserApiPort" value="http://192.168.0.161:5431/"/>
-		<add key="userApiPort" value="http://192.168.0.161:5432/"/>
-		<add key="communicationApiPort" value="http://192.168.0.161:5433/"/>
-		<add key="chatApiPort" value="http://192.168.0.161:5434/"/>
+		<add key="combatParserApiPort" value="http://solinx.analysis.api.parser/"/>
+		<add key="userApiPort" value="http://solinx.analysis.api.user/"/>
+		<add key="communicationApiPort" value="http://solinx.analysis.api.communication/"/>
+		<add key="chatApiPort" value="http://solinx.analysis.api.chat/"/>
 		<add key="maxDegreeOfParallelism" value="5"/>
 		<add key="appVersionType" value="Beta"/>
 		<add key="appVersion" value="1.7.0"/>
