Add Desktop authorization
Add Desktop authorization via Identity Servicer: now user will be redirected to Identity Server for OAuth 2.0 Code Flow with PKCE Authorization

--- a/src/CombatAnalysis.App/App.config
+++ b/src/CombatAnalysis.App/App.config
@@ -5,6 +5,9 @@
 		<add key="userApiPort" value="http://solinx.analysis.api.user/"/>
 		<add key="communicationApiPort" value="http://solinx.analysis.api.communication/"/>
 		<add key="chatApiPort" value="http://solinx.analysis.api.chat/"/>
+		<add key="identityPort" value="http://localhost:5090/"/>
+		<add key="clientId" value="client1"/>
+		<add key="redirectUri" value="http://localhost:44479/callback"/>
 		<add key="maxDegreeOfParallelism" value="5"/>
 		<add key="appVersionType" value="Beta"/>
 		<add key="appVersion" value="1.7.0"/>
