Update Desktop app with OAuth 2.0
Update Desktop app with OAuth 2.0

--- a/charts/web-app-chart/templates/ingress.yaml
+++ b/charts/web-app-chart/templates/ingress.yaml
@@ -4,14 +4,18 @@ metadata:
   name: {{ .Release.Name }}-ingress
 spec:
   ingressClassName: nginx
+  tls:
+  - hosts:
+    - {{ .Values.ingress.host }}
+    secretName: analysis-tls-secret
   rules:
-  - host: {{ .Values.ingress.appName }}
+  - host: {{ .Values.ingress.host }}
     http:
       paths:
-        - path: /
-          pathType: Prefix
-          backend:
-            service:
-              name: {{ .Release.Name }}-service
-              port:
-                number: {{ .Values.ingress.port }}
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: {{ .Release.Name }}-service
+            port:
+              number: {{ .Values.ingress.port }}
