--- a/src/CombatAnalysis.App/App.config
+++ b/src/CombatAnalysis.App/App.config
@@ -5,7 +5,7 @@
 		<add key="userApiPort" value="http://solinx.analysis.api.user/"/>
 		<add key="communicationApiPort" value="http://solinx.analysis.api.communication/"/>
 		<add key="chatApiPort" value="http://solinx.analysis.api.chat/"/>
-		<add key="identityPort" value="http://localhost:5090/"/>
+		<add key="identityPort" value="http://solinx.analysis.identity/"/>
 		<add key="clientId" value="client1"/>
 		<add key="redirectUri" value="http://localhost:44479/callback"/>
 		<add key="maxDegreeOfParallelism" value="5"/>
