Fix Authorization issue
Fix Authorization issue: resolved problem with redirect url and Protocol (https/http)

--- a/src/CombatAnalysis.App/App.config
+++ b/src/CombatAnalysis.App/App.config
@@ -6,8 +6,11 @@
 		<add key="communicationApiPort" value="http://solinx.analysis.api.communication/"/>
 		<add key="chatApiPort" value="http://solinx.analysis.api.chat/"/>
 		<add key="identityPort" value="http://solinx.analysis.identity/"/>
-		<add key="clientId" value="client1"/>
-		<add key="redirectUri" value="http://localhost:44479/callback"/>
+		<add key="clientId" value="client2"/>
+		<add key="scope" value="client2scope"/>
+		<add key="redirectUri" value="localhost:45571/callback"/>
+		<add key="listener" value="localhost:45571/"/>
+		<add key="protocol" value="http"/>
 		<add key="maxDegreeOfParallelism" value="5"/>
 		<add key="appVersionType" value="Beta"/>
 		<add key="appVersion" value="1.7.0"/>
