--- a/src/CombatAnalysis.WebApp/appsettings.Development.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Development.json
@@ -3,9 +3,9 @@
   "UserApiPort": "https://localhost:5003/",
   "ChatApiPort": "https://localhost:5007/",
   "CommunicationApiPort": "https://localhost:5009/",
-  "IdentityPort": "https://localhost:7064/",
+  "IdentityPort": "http://localhost:5090/",
   "Authentication": {
     "ClientId": "client1",
-    "RedirectUri": "https://localhost:44479/callback"
+    "RedirectUri": "localhost:44479/callback"
   }
 }
