--- a/src/CombatAnalysis.WebApp/appsettings.Production.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Production.json
@@ -6,6 +6,6 @@
   "IdentityPort": "http://identity-service.identity.svc.cluster.local/",
   "Authentication": {
     "ClientId": "client1",
-    "RedirectUri": "https://solinx.analysis.web/callback"
+    "RedirectUri": "solinx.analysis.web/callback"
   }
 }
