--- a/src/CombatAnalysis.WebApp/ClientApp/.env.production
+++ b/src/CombatAnalysis.WebApp/ClientApp/.env.production
@@ -6,4 +6,4 @@ REACT_APP_CLIENT_SCOPE=client1scope
 REACT_APP_IDENTITY_SERVER=https://solinx.analysis.identity
 REACT_APP_IDENTITY_SERVER_AUTH_PATH=authorization
 REACT_APP_IDENTITY_SERVER_REGISTRY_PATH=registration
-REACT_APP_REDIRECT_URI=https://solinx.analysis.web/callback
+REACT_APP_REDIRECT_URI=solinx.analysis.web/callback
