--- a/src/Identity/CombatAnalysisIdentity/appsettings.Development.json
+++ b/src/Identity/CombatAnalysisIdentity/appsettings.Development.json
@@ -5,7 +5,8 @@
   "Authentication": {
     "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ=",
     "Issuer": "http://localhost:5090/",
-    "TokenExpiresInMinutes": 60
+    "TokenExpiresInMinutes": 60,
+    "Protocol": "http"
   },
   "Client": {
     "ClientId": "client1",
