--- a/src/Identity/CombatAnalysisIdentity/appsettings.Development.json
+++ b/src/Identity/CombatAnalysisIdentity/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=SOLINX;Database=Combat_Analysis.Identity;User Id=sa;Password=Oleg123;Integrated Security=False;Connect Timeout=120;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
+  "UserApiPort": "http://localhost:5002/",
   "Authentication": {
     "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ=",
     "Issuer": "http://localhost:5090/",
