Update Web app Loading status
Update Web app Loading status

--- a/src/Identity/CombatAnalysisIdentity/appsettings.Development.json
+++ b/src/Identity/CombatAnalysisIdentity/appsettings.Development.json
@@ -8,12 +8,12 @@
     "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ=",
     "Issuer": "http://localhost:5090/",
     "TokenExpiresInMinutes": 60,
-    "Protocol": "http"
+    "Protocol": "https"
   },
   "Client": {
-    "ClientId": "client1",
-    "ClientSecret": "secret1",
-    "Scope": "api1"
+    "ClientId": "client3",
+    "ClientSecret": "secret3",
+    "Scope": "client3scope"
   },
   "Certificates": {
     "PWD": "*Terrible/95+Last-"
