Add refresh Access token
Add refresh Access token by Refresh token:
  - if Access token expired or soon expired, Access token will be refreshed by Refresh token

--- a/src/CombatAnalysis.WebApp/appsettings.Development.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Development.json
@@ -6,6 +6,7 @@
   "IdentityPort": "http://localhost:5090/",
   "Authentication": {
     "ClientId": "client3",
-    "RedirectUri": "localhost:44479/callback"
+    "RedirectUri": "localhost:44479/callback",
+    "RefreshTokenExpiresDays": 7
   }
 }
