--- a/src/Identity/CombatAnalysisIdentity/appsettings.Production.json
+++ b/src/Identity/CombatAnalysisIdentity/appsettings.Production.json
@@ -7,7 +7,8 @@
   "Authentication": {
     "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ=",
     "Issuer": "https://solinx.analysis.identity/",
-    "TokenExpiresInMinutes": 60,
+    "AccessTokenExpiresMins": 60,
+    "RefreshTokenExpiresDays": 7,
     "Protocol": "http"
   },
   "Client": {
@@ -16,7 +17,8 @@
     "Scope": "api1"
   },
   "Certificates": {
-    "PWD": "*Terrible/95+Last-"
+    "PWD": "*Terrible/95+Last-",
+    "Name": "solinx.analysis.pfx"
   },
   "DetailedErrors": true,
   "Logging": {
