--- a/src/Identity/CombatAnalysisIdentity/appsettings.Development.json
+++ b/src/Identity/CombatAnalysisIdentity/appsettings.Development.json
@@ -2,12 +2,13 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=SOLINX;Database=Combat_Analysis.Identity;User Id=sa;Password=Oleg123;Integrated Security=False;Connect Timeout=120;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
-  "UserApiPort": "http://localhost:5002/",
+  "UserApiPort": "https://localhost:5003/",
   "IdentityPort": "http://localhost:5090/",
   "Authentication": {
     "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ=",
     "Issuer": "http://localhost:5090/",
-    "TokenExpiresInMinutes": 60,
+    "AccessTokenExpiresMins": 60,
+    "RefreshTokenExpiresDays": 7,
     "Protocol": "https"
   },
   "Client": {
@@ -16,7 +17,8 @@
     "Scope": "client3scope"
   },
   "Certificates": {
-    "PWD": "*Terrible/95+Last-"
+    "PWD": "*Terrible/95+Last-",
+    "Name": "solinx.analysis.pfx"
   },
   "DetailedErrors": true,
   "Logging": {
