Add grantType verification
Add grantType verification

--- a/src/CombatAnalysis.App/App.config
+++ b/src/CombatAnalysis.App/App.config
@@ -11,6 +11,9 @@
 		<add key="redirectUri" value="localhost:45571/callback"/>
 		<add key="listener" value="localhost:45571/"/>
 		<add key="protocol" value="http"/>
+		<add key="grantTypeCode" value="code"/>
+		<add key="grantTypeAuthorization" value="authorizationCode"/>
+		<add key="grantTypeRefreshToken" value="refreshToken"/>
 		<add key="maxDegreeOfParallelism" value="5"/>
 		<add key="appVersionType" value="Beta"/>
 		<add key="appVersion" value="1.7.0"/>
