--- a/src/CombatAnalysis.WebApp/appsettings.Development.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Development.json
@@ -7,6 +7,11 @@
   "Authentication": {
     "ClientId": "client3",
     "RedirectUri": "localhost:44479/callback",
-    "RefreshTokenExpiresDays": 7
+    "RefreshTokenExpiresDays": 7,
+    "GrantType": {
+      "Code": "code",
+      "Authorization": "authorizationCode",
+      "RefreshToken": "refreshToken"
+    }
   }
 }
