--- a/src/CombatAnalysis.WebApp/appsettings.Production.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Production.json
@@ -7,6 +7,11 @@
   "Authentication": {
     "ClientId": "client1",
     "RedirectUri": "solinx.analysis.web/callback",
-    "RefreshTokenExpiresDays": 7
+    "RefreshTokenExpiresDays": 7,
+    "GrantType": {
+      "Code": "code",
+      "Authorization": "authorizationCode",
+      "RefreshToken": "refreshToken"
+    }
   }
 }
