--- a/src/Identity/CombatAnalysisIdentity/appsettings.Development.json
+++ b/src/Identity/CombatAnalysisIdentity/appsettings.Development.json
@@ -9,6 +9,11 @@
     "Issuer": "http://localhost:5090/",
     "AccessTokenExpiresMins": 60,
     "RefreshTokenExpiresDays": 7,
+    "GrantType": {
+      "Code": "code",
+      "Authorization": "authorizationCode",
+      "RefreshToken": "refreshToken"
+    },
     "Protocol": "https"
   },
   "Client": {
