--- a/src/Identity/CombatAnalysisIdentity/appsettings.Production.json
+++ b/src/Identity/CombatAnalysisIdentity/appsettings.Production.json
@@ -9,6 +9,11 @@
     "Issuer": "https://solinx.analysis.identity/",
     "AccessTokenExpiresMins": 60,
     "RefreshTokenExpiresDays": 7,
+    "GrantType": {
+      "Code": "code",
+      "Authorization": "authorizationCode",
+      "RefreshToken": "refreshToken"
+    },
     "Protocol": "http"
   },
   "Client": {
