Fix style issues
Fix style issues

--- a/charts/web-app-chart/templates/deployment.yaml
+++ b/charts/web-app-chart/templates/deployment.yaml
@@ -23,6 +23,9 @@ spec:
           image: {{ .Values.container.image }}:{{ .Values.container.tag }}
           ports:
             - containerPort: {{ .Values.container.port }}
+          env:
+          - name: ASPNETCORE_ENVIRONMENT
+            value: "Production"
           volumeMounts:
             - name: kube-root-ca-volume
               mountPath: "/etc/ssl/certs/ca-cert"
