--- a/charts/web-app-chart/templates/ingress.yaml
+++ b/charts/web-app-chart/templates/ingress.yaml
@@ -12,6 +12,13 @@ spec:
   - host: {{ .Values.ingress.host }}
     http:
       paths:
+      - path: /locales(/|$)(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: {{ .Release.Name }}-service
+            port:
+              number: {{ .Values.ingress.port }}
       - path: /
         pathType: Prefix
         backend:
