--- a/src/CombatAnalysis.App/App.config
+++ b/src/CombatAnalysis.App/App.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="combatParserApiPort" value="http://solinx.analysis.api.parser/"/>
-		<add key="userApiPort" value="http://solinx.analysis.api.user/"/>
-		<add key="communicationApiPort" value="http://solinx.analysis.api.communication/"/>
-		<add key="chatApiPort" value="http://solinx.analysis.api.chat/"/>
-		<add key="identityPort" value="http://solinx.analysis.identity/"/>
+		<add key="combatParserApiPort" value="http://api.analysis.parser.com/"/>
+		<add key="userApiPort" value="http://api.analysis.user.com/"/>
+		<add key="communicationApiPort" value="http://api.analysis.communication.com/"/>
+		<add key="chatApiPort" value="http://api.analysis.chat.com/"/>
+		<add key="identityPort" value="http://identity.analysis.com/"/>
 		<add key="clientId" value="client2"/>
 		<add key="scope" value="client2scope"/>
 		<add key="redirectUri" value="localhost:45571/callback"/>
