--- a/src/CombatAnalysis.WebApp/appsettings.Development.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Development.json
@@ -6,7 +6,12 @@
   "IdentityPort": "http://localhost:5090/",
   "Authentication": {
     "ClientId": "client3",
+    "ClientScope": "client3scope",
     "RedirectUri": "localhost:44479/callback",
+    "IdentityServer": "http://localhost:5090/",
+    "IdentityAuthPath": "authorization",
+    "IdentityRegistryPath": "registration",
+    "CodeChallengeMethod": "SHA-256",
     "RefreshTokenExpiresDays": 7,
     "GrantType": {
       "Code": "code",
