--- a/src/CombatAnalysis.WebApp/appsettings.Production.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Production.json
@@ -6,7 +6,12 @@
   "IdentityPort": "http://identity-service.identity.svc.cluster.local/",
   "Authentication": {
     "ClientId": "client1",
-    "RedirectUri": "solinx.analysis.web/callback",
+    "ClientScope": "client1scope",
+    "RedirectUri": "encounters.analysis.com/callback",
+    "IdentityServer": "https://identity.analysis.com/",
+    "IdentityAuthPath": "authorization",
+    "IdentityRegistryPath": "registration",
+    "CodeChallengeMethod": "SHA-256",
     "RefreshTokenExpiresDays": 7,
     "GrantType": {
       "Code": "code",
