--- a/src/Identity/CombatAnalysisIdentity/appsettings.Production.json
+++ b/src/Identity/CombatAnalysisIdentity/appsettings.Production.json
@@ -3,10 +3,10 @@
     "DefaultConnection": "Server=host.docker.internal,1433;Database=Combat_Analysis.Identity;User Id=sa;Password=Oleg123;Integrated Security=False;Connect Timeout=120;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "UserApiPort": "http://api-user-api-service.api.svc.cluster.local/",
-  "IdentityPort": "https://solinx.analysis.identity/",
+  "IdentityPort": "https://identity.analysis.com/",
   "Authentication": {
     "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ=",
-    "Issuer": "https://solinx.analysis.identity/",
+    "Issuer": "https://identity.analysis.com/",
     "AccessTokenExpiresMins": 60,
     "RefreshTokenExpiresDays": 7,
     "GrantType": {
