Move check auth code to server side
Move check auth code to server side

--- a/src/CombatAnalysis.WebApp/CombatAnalysis.WebApp.csproj
+++ b/src/CombatAnalysis.WebApp/CombatAnalysis.WebApp.csproj
@@ -35,6 +35,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ClientApp\public\locales\en\identity\" />
+    <Folder Include="ClientApp\public\locales\ru\identity\" />
     <Folder Include="ClientApp\src\components\communication\events\" />
     <Folder Include="ClientApp\src\hocHelpers\" />
     <Folder Include="ClientApp\src\store\slicers\" />
