--- a/src/CombatAnalysis.WebApp/ClientApp/package.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "combatanalysis.webapp",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
@@ -51,6 +51,8 @@
     "workbox-streams": "^6.5.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
     "ajv": "^8.11.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.22.0",
@@ -62,6 +64,7 @@
     "nan": "^2.16.0",
     "nodemon": "^3.0.3",
     "readable-stream": "^4.5.2",
+    "redux-mock-store": "^1.5.4",
     "typescript": "^4.7.4"
   },
   "overrides": {
