--- a/charts/web-app-chart/values.yaml
+++ b/charts/web-app-chart/values.yaml
@@ -10,7 +10,7 @@ resources:
 container:
     name: solinx-analysis-web-app
     image: solinx/solinx-analysis-web-app
-    tag: latest
+    tag: 0.2.2
     port: 80
 service:
     protocol: TCP
