--- a/src/CombatAnalysis.App/App.config
+++ b/src/CombatAnalysis.App/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="combatParserApiPort" value="http://api.analysis.parser.com/"/>
+		<add key="combatParserApiPort" value="https://localhost:5001/"/>
 		<add key="userApiPort" value="http://api.analysis.user.com/"/>
 		<add key="communicationApiPort" value="http://api.analysis.communication.com/"/>
 		<add key="chatApiPort" value="http://api.analysis.chat.com/"/>
