--- a/src/CombatAnalysis.WebApp/ClientApp/package.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/package.json
@@ -36,6 +36,7 @@
     "simple-peer": "^9.11.1",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
