--- a/src/CombatAnalysis.WebApp/ClientApp/package.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@microsoft/signalr": "^8.0.7",
     "@reduxjs/toolkit": "^1.9.0",
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
