--- a/src/CombatAnalysis.WebApp/ClientApp/.env.production
+++ b/src/CombatAnalysis.WebApp/ClientApp/.env.production
@@ -2,3 +2,4 @@ PORT=44479
 HTTPS=true
 REACT_APP_IDENTITY_SERVER_AUTH_PATH=authorization
 REACT_APP_IDENTITY_SERVER_REGISTRY_PATH=registration
+REACT_APP_CHAT_PAGE_SIZE=10
