--- a/src/CombatAnalysis.WebApp/ClientApp/.env.development
+++ b/src/CombatAnalysis.WebApp/ClientApp/.env.development
@@ -3,3 +3,4 @@ HTTPS=true
 REACT_APP_IDENTITY_SERVER_AUTH_PATH=authorization
 REACT_APP_IDENTITY_SERVER_REGISTRY_PATH=registration
 REACT_APP_CHAT_PAGE_SIZE=50
+REACT_APP_COMMUNITY_POST_PAGE_SIZE=10
