--- a/src/CombatAnalysis.Identity/CombatAnalysis.Identity.csproj
+++ b/src/CombatAnalysis.Identity/CombatAnalysis.Identity.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="8.0.10" />
   </ItemGroup>
 
   <ItemGroup>
