--- a/src/CombatAnalysis.WebApp/ClientApp/.env.production
+++ b/src/CombatAnalysis.WebApp/ClientApp/.env.production
@@ -2,6 +2,7 @@ PORT=44479
 HTTPS=true
 REACT_APP_IDENTITY_SERVER_AUTH_PATH=authorization
 REACT_APP_IDENTITY_SERVER_REGISTRY_PATH=registration
+REACT_APP_IDENTITY_SERVER_VERIFY_EMAIL_PATH=initVerification
 REACT_APP_CHAT_PAGE_SIZE=50
 REACT_APP_COMMUNITY_PAGE_SIZE=10
 REACT_APP_COMMUNITY_POST_PAGE_SIZE=10
