Create SQL Kubernetes service
Create SQL Kubernetes service

--- a/charts/identity-chart/Chart.yaml
+++ b/charts/identity-chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: CombatAnalaysisHelmChart
-description: Helm Chart for Combat analysis identity
+name: IdentityHelmChart
+description: Helm Chart for Combat analysis Identity
 type: application
 version: 0.1.0
 appVersion: "0.1.0"
