--- a/src/Identity/CombatAnalysisIdentity/CombatAnalysisIdentity.csproj
+++ b/src/Identity/CombatAnalysisIdentity/CombatAnalysisIdentity.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\CombatAnalysis.CutomerBL\CombatAnalysis.CustomerBL.csproj" />
     <ProjectReference Include="..\..\CombatAnalysis.Identity\CombatAnalysis.Identity.csproj" />
   </ItemGroup>
 
