--- a/src/CombatAnalysis.App/App.config
+++ b/src/CombatAnalysis.App/App.config
@@ -2,15 +2,15 @@
 <configuration>
 	<appSettings>
 		<add key="combatParserApiPort" value="https://localhost:5001/"/>
-		<add key="userApiPort" value="http://api.analysis.user.com/"/>
-		<add key="communicationApiPort" value="http://api.analysis.communication.com/"/>
-		<add key="chatApiPort" value="http://api.analysis.chat.com/"/>
-		<add key="identityPort" value="http://identity.analysis.com/"/>
+		<add key="userApiPort" value="https://localhost:5003/"/>
+		<add key="chatApiPort" value="https://localhost:5007/"/>
+		<add key="communicationApiPort" value="https://localhost:5009/"/>
+		<add key="identityPort" value="http://localhost:5090/"/>
 		<add key="clientId" value="client2"/>
 		<add key="scope" value="client2scope"/>
 		<add key="redirectUri" value="localhost:45571/callback"/>
 		<add key="listener" value="localhost:45571/"/>
-		<add key="protocol" value="http"/>
+		<add key="protocol" value="https"/>
 		<add key="grantTypeCode" value="code"/>
 		<add key="grantTypeAuthorization" value="authorizationCode"/>
 		<add key="grantTypeRefreshToken" value="refreshToken"/>
