--- a/src/CombatAnalysis.App/CombatAnalysis.App.csproj
+++ b/src/CombatAnalysis.App/CombatAnalysis.App.csproj
@@ -238,7 +238,7 @@
     <None Update="App.config">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
-    <None Update="user.json">
+    <None Update="User.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
