--- a/src/CombatAnalysis.WebApp/CombatAnalysis.WebApp.csproj
+++ b/src/CombatAnalysis.WebApp/CombatAnalysis.WebApp.csproj
@@ -17,6 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.20" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.20" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client.Core" Version="7.0.20" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="7.0.20" />
