--- a/src/CombatAnalysis.WebApp/appsettings.Production.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Production.json
@@ -17,6 +17,9 @@
       "Code": "code",
       "Authorization": "authorizationCode",
       "RefreshToken": "refreshToken"
-    }
+    },
+    "Authority": "http://localhost:5090/",
+    "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ=",
+    "Audience": "client1"
   }
 }
