Move VoiceChat hub to Hub app
Move VoiceChat hub  from Web app to Hub app

--- a/src/CombatAnalysis.App/appsettings.Development.json
+++ b/src/CombatAnalysis.App/appsettings.Development.json
@@ -6,6 +6,14 @@
     "Communication": "https://localhost:5009/",
     "Identity": "http://localhost:5090/"
   },
+  "Hubs": {
+    "Port": "https://localhost:7026/",
+    "PersonalChatAddress": "personalChatHub",
+    "PersonalChatUnreadMessageAddress": "personalChatUnreadMessageHub",
+    "GroupChatAddress": "groupChatHub",
+    "GroupChatUnreadMessageAddress": "groupChatUnreadMessageHub",
+    "VoiceChatAddress": "voiceChatHub"
+  },
   "App": {
     "VersionType": "Dev",
     "Auth": {
