--- a/src/CombatAnalysis.WebApp/ClientApp/.env.development
+++ b/src/CombatAnalysis.WebApp/ClientApp/.env.development
@@ -6,3 +6,9 @@ REACT_APP_IDENTITY_SERVER_VERIFY_EMAIL_PATH=initVerification
 REACT_APP_CHAT_PAGE_SIZE=50
 REACT_APP_COMMUNITY_PAGE_SIZE=5
 REACT_APP_COMMUNITY_POST_PAGE_SIZE=5
+REACT_APP_HUBS_URL=https://localhost:7026/
+REACT_APP_HUBS_PERSONAL_CHAT_ADDRESS=personalChatHub
+REACT_APP_HUBS_GROUP_CHAT_ADDRESS=groupChatHub
+REACT_APP_HUBS_PERSONAL_CHAT_UNREAD_MESSAGES_ADDRESS=personalChatUnreadMessageHub
+REACT_APP_HUBS_GROUP_CHAT_UNREAD_MESSAGES_ADDRESS=groupChatUnreadMessageHub
+REACT_APP_HUBS_VOICE_CHAT_ADDRESS=voiceChatHub
