--- a/src/CombatAnalysis.App/appsettings.Development.json
+++ b/src/CombatAnalysis.App/appsettings.Development.json
@@ -9,8 +9,10 @@
   "Hubs": {
     "Port": "https://localhost:7026/",
     "PersonalChatAddress": "personalChatHub",
+    "PersonalChatMessagesAddress": "personalChatMessagesHub",
     "PersonalChatUnreadMessageAddress": "personalChatUnreadMessageHub",
     "GroupChatAddress": "groupChatHub",
+    "GroupChatMessagesAddress": "groupChatMessagesHub",
     "GroupChatUnreadMessageAddress": "groupChatUnreadMessageHub",
     "VoiceChatAddress": "voiceChatHub"
   },
