--- a/src/API/CombatAnalysis.Hubs/appsettings.Development.json
+++ b/src/API/CombatAnalysis.Hubs/appsettings.Development.json
@@ -4,5 +4,9 @@
     "Authority": "http://localhost:5090/",
     "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ=",
     "Audience": "client1"
+  },
+  "Cors": {
+    "WebApp": "https://localhost:44479",
+    "Hubs": "https://localhost:7026"
   }
 }
