Add DB Migration
Add DB Migration in SQL Projects that allow create DB tables from EF Models ('code first') : create migration from DB Context, generate Init SQL script and insert in SQL Project

--- a/charts/api-chart/Chart.yaml
+++ b/charts/api-chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: DBHelmChart
-description: Helm Chart for Combat analysis Database
+name: APIHelmChart
+description: Helm Chart for Combat analysis API
 type: application
-version: 0.1.0
-appVersion: "0.1.0"
+version: 0.2.0
+appVersion: "0.2.0"
