--- a/src/API/CombatAnalysis.Hubs/Dockerfile
+++ b/src/API/CombatAnalysis.Hubs/Dockerfile
@@ -1,6 +1,6 @@
 # This stage is used when running from VS in fast mode (Default for Debug configuration)
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER app
+USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
@@ -9,21 +9,19 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["src/API/HealthAPI/HealthAPI.csproj", "src/API/HealthAPI/"]
-COPY ["src/CombatAnalysis.Identity/CombatAnalysis.Identity.csproj", "src/CombatAnalysis.Identity/"]
-COPY ["src/CombatAnalysis.IdentityDAL/CombatAnalysis.IdentityDAL.csproj", "src/CombatAnalysis.IdentityDAL/"]
-RUN dotnet restore "./src/API/HealthAPI/HealthAPI.csproj"
+COPY ["src/API/CombatAnalysis.Hubs/CombatAnalysis.Hubs.csproj", "src/API/CombatAnalysis.Hubs/"]
+RUN dotnet restore "./src/API/CombatAnalysis.Hubs/CombatAnalysis.Hubs.csproj"
 COPY . .
-WORKDIR "/src/src/API/HealthAPI"
-RUN dotnet build "./HealthAPI.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/src/API/CombatAnalysis.Hubs"
+RUN dotnet build "./CombatAnalysis.Hubs.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./HealthAPI.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./CombatAnalysis.Hubs.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "HealthAPI.dll"]
+ENTRYPOINT ["dotnet", "CombatAnalysis.Hubs.dll"]
