--- a/charts/api-chart/templates/ingress.yaml
+++ b/charts/api-chart/templates/ingress.yaml
@@ -47,3 +47,23 @@ spec:
                 name: {{ .Release.Name }}-{{ .Values.app4.name }}-service
                 port:
                   number: {{ .Values.app4.ingress.port }}
+    - host: {{ .Values.app5.hostName }}
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: {{ .Release.Name }}-{{ .Values.app5.name }}-service
+                port:
+                  number: {{ .Values.app5.ingress.port }}
+    - host: {{ .Values.app6.hostName }}
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: {{ .Release.Name }}-{{ .Values.app6.name }}-service
+                port:
+                  number: {{ .Values.app6.ingress.port }}
