--- a/src/CombatAnalysis.WebApp/Dockerfile
+++ b/src/CombatAnalysis.WebApp/Dockerfile
@@ -1,10 +1,7 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
-
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 ARG BUILD_CONFIGURATION=Release
@@ -15,8 +12,7 @@ COPY . .
 WORKDIR "/src/src/CombatAnalysis.WebApp"
 RUN dotnet build "./CombatAnalysis.WebApp.csproj" -c $BUILD_CONFIGURATION -o /app/build
 RUN apt-get update && apt-get upgrade -y && \
-    apt-get install -y nodejs \
-    npm 
+    apt-get install -y nodejs npm 
     
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
