--- a/src/API/CombatAnalysis.UserApi/CombatAnalysis.UserApi.csproj
+++ b/src/API/CombatAnalysis.UserApi/CombatAnalysis.UserApi.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\CombatAnalysis.CutomerBL\CombatAnalysis.CustomerBL.csproj" />
+    <ProjectReference Include="..\..\CombatAnalysis.UserBL\CombatAnalysis.UserBL.csproj" />
   </ItemGroup>
 
 </Project>
